--- a/app/javascript/app/modules/eminentpersonalityhome/component/stepper/stepper.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/component/stepper/stepper.scss
@@ -3,13 +3,13 @@ $whiteColor:#fff;
 $graybg: #C9C9C9;
 $blackcolor:#000;
 .stepperwrap{
-  color: ($basicColor) ;
+  //color: ($basicColor) ;
   .MuiSvgIcon-root{
     width: 50px;
     height: 50px;
   }
   .MuiStepLabel-label{
-    font-size: 16px;
+    font-size: 18px;
   }
   .css-zpcwqm-MuiStepConnector-root{
     top:24px
