--- a/app/javascript/app/modules/eminenthome/shared/filterssidebar/filterssidebar.scss
+++ b/app/javascript/app/modules/eminenthome/shared/filterssidebar/filterssidebar.scss
@@ -8,6 +8,11 @@
   box-shadow: none !important;
 }
 
+.accordian-with-bt {
+  border-top: solid 1px rgba(0,0,0,0.1);
+  margin: 0px !important;
+}
+
 .filterType{
   color: #343434 !important;
   font-size: 15px !important;
@@ -24,3 +29,7 @@
   line-height: normal;
   opacity: 0.8 !important;
 }
+
+//.filteraccord{
+//  border-bottom: solid 1px rgba(0,0,0,0.1);
+//}
