--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -66,9 +66,7 @@ h5.MuiTypography-root{
     background: transparent;
 
   }
-input{
-  width: 100%;
-}
+
   .checkbox{
     font-size: 12px;
     color: ($checkcolor);
@@ -126,13 +124,18 @@ label.light-circle{
   .MuiGrid-item{
     padding: 0.8rem ;
   }
-  button.save{
-    padding: 12px 20px;
-    border-radius: 7px;
-    &:hover{
-      padding: 12px 20px;
-      border-radius: 7px;
-    }
+
+}
+button.save{
+  padding: 12px 20px;
+  border-radius: 7px;
+  background: ($basicColor);
+  border: 1px solid ($basicColor);
+  color: ($whiteColor);
+  &:hover{
+    background: ($basicColor);
+    border: 1px solid ($basicColor);
+    color: ($whiteColor);
   }
 }
 button.cancelbtn{
@@ -162,4 +165,9 @@ button.cancelbtn{
 }
 .education-field{
   border-bottom: 1px solid ($border);
+}
+.custom-file-input {
+  background-color: #f0f0f0;
+  border: 2px solid #0077cc;
+  padding: 8px;
 }
