--- a/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
+++ b/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
@@ -136,6 +136,10 @@ border: solid 1px rgba(0,0,0,0.3);
   margin-right: 2%;
 }
 
+.MuiPopper-root{
+  z-index: 10 !important;
+}
+
 .single-row {
   border-bottom: solid 1px rgba(0,0,0,0.1);
   padding-bottom: 20px;
@@ -200,3 +204,32 @@ border: solid 1px rgba(0,0,0,0.3);
   border-radius: 40px;
   background: lightgray 50%;
 }
+
+.dropdown-menu>li{
+  cursor: pointer;
+}
+
+.customModal{
+  display: block !important;
+}
+
+.addModal{
+  height: 50%;
+  width: 80%;
+}
+
+.cancelbtn{
+  cursor: pointer;
+}
+
+.reasontext{
+  width: 100%;
+  border-color: red;
+  padding-top:3%;
+
+}
+
+.deletereasontext:focus{
+  outline-color: red;
+}
+
