--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -198,4 +198,100 @@ button.cancelbtn{
   }
 }
 
+.language-container {
+  display: flex;
+  width: 100%;
+  height: 3.2rem;
+  border: 1px solid grey;
+  border-radius: 0.4rem;
+  align-items: center;
+  padding-left: 1.5rem;
+}
 
+.language-selection-container {
+  padding: 1rem;
+  width: 100%;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 3px 8px;
+  height: 18rem;
+}
+
+.arrow-down-icon {
+  margin: auto 1rem auto auto;
+}
+
+.language {
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.2rem;
+  margin: 1rem;
+  color: darkgray;
+  font-weight: 400;
+}
+
+.lang-input-box {
+  width: 1.5rem;
+  height: 1.1rem;
+  &:checked {
+    background-color: #ffffff;
+    color: #000000
+  }
+}
+
+.lang-input-box:checked {
+    background-color: #ffffff;
+    color: #000000
+}
+
+.languages-list {
+  height: 12rem;
+  overflow: hidden;
+  overflow-y: auto;
+}
+
+
+.languages-list::-webkit-scrollbar {
+  width: 0.2rem;
+}
+
+.languages-list::-webkit-scrollbar-thumb {
+  background-color: transparent;
+}
+
+.rotate-180 {
+  rotate: 180deg;
+}
+
+.selected-lang {
+  display: flex;
+  border: 1px solid;
+  padding: 5px 10px;
+  border-radius: 0.4rem;
+  gap: 9px;
+}
+
+.selected-languages {
+  display: flex;
+  gap: 0.5rem;
+  font-size: 0.8rem;
+  margin-top: 10px;
+}
+
+.language-selected-buttons {
+  display: flex;
+  justify-content: end;
+  gap: 2rem;
+  margin-top: 1rem;
+}
+
+.lang-btn {
+  border: 1px solid lightgray;
+  padding: 0.5rem 1.7rem;
+  border-radius: 10px;
+  color: darkgrey;
+  font-weight: 500;
+}
+
+.save-btn {
+  background: ($basicColor) !important;
+  color: #FFFFFF !important;
+}
