--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -190,6 +190,7 @@ button.cancelbtn{
     padding: 14px;
   }
   td{
+    font-weight: 600;
     border-top:1px solid ($borderColor);
     padding:10px
   }
@@ -377,6 +378,37 @@ button.cancelbtn{
 
 .edit-button-logo {
   margin-left: auto;
+}
+
+.profession-description {
+  margin-top: 1rem !important;
+}
+
+.profession-description  textarea {
+  padding: 1rem !important;
+}
+
+.date-na-button {
+  display: flex;
+  gap: 1rem;
+  font-size: 1.2rem;
+  color: #837F7F;
+  margin-top: 0.5rem;
+  margin-left: 0.6rem;
+  align-items: center;
+  text-align: center;
+}
+
+.na-check-box input {
+  align-items: center;
+  display: flex;
+  width: 1.1rem;
+  height: 1.1rem;
+}
+
+.na-check-box {
+  align-items: center;
+  display: flex;
 }
 
 
