--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -399,6 +399,10 @@ button.cancelbtn{
   text-align: center;
 }
 
+.date-na-button-out-side {
+  margin: 0.8rem 0rem!important;
+}
+
 .na-check-box input {
   align-items: center;
   display: flex;
