--- a/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
+++ b/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
@@ -233,3 +233,16 @@ border: solid 1px rgba(0,0,0,0.3);
   outline-color: red;
 }
 
+page-item.active a {
+  background: #4861AA;
+  border: 1px solid #4861AA;
+}
+page-item:first-child .page-link{
+  border-radius: 0;
+  border: 1px solid rgba(0, 0, 0, 0.10);
+  background: #FFF;
+  color: #4861AA;
+}
+page-item:first-child .page-link{
+  border-radius: 5px 0px 0px 5px;
+}
