--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,4 @@
 <%= content_tag(:div, "", id: "app", data: {
-  controller: "react"
+  controller: "react",
+  candidate_login: @candidate_login_var
 }) %>
