--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -202,6 +202,7 @@ button.cancelbtn{
 
 .data-table th:last-child {
   border-right: none !important;
+  max-width: 15rem;
 }
 
 .language-container {
