--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -519,6 +519,10 @@ button.cancelbtn{
   gap: 1rem;
 }
 
-.pdf-file-name {
-  cursor: pointer;
+#pdf-file-name {
+  cursor: pointer !important;
+}
+
+.delete-btn {
+  margin-top: 0rem !important;
 }
