--- a/app/javascript/app/modules/eminentpersonalityhome/simpleDropdown/autoCompleteDropdown.css
+++ b/app/javascript/app/modules/eminentpersonalityhome/simpleDropdown/autoCompleteDropdown.css
@@ -1,3 +1,8 @@
 .auto-complete-dropdown-true .MuiOutlinedInput-notchedOutline {
     border: none !important;
 }
+
+.election-dropdown {
+    width: 20rem;
+    margin-right: 2rem;
+}
