master of vacancies csv file upload api integration

--- a/app/javascript/app/modules/eminenthome/shared/tabs/tabs.css
+++ b/app/javascript/app/modules/eminenthome/shared/tabs/tabs.css
@@ -53,3 +53,9 @@ button.downloadBtn,button.downloadBtn:hover {
     text-align: center;
     color: #000;
 }
+.alertmessage{
+    position: absolute;
+    top: 10%;
+    right: 3%;
+    z-index: 1;
+}
