'fixed electoral Details'

--- a/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
+++ b/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
@@ -246,3 +246,7 @@ page-item:first-child .page-link{
 page-item:first-child .page-link{
   border-radius: 5px 0px 0px 5px;
 }
+
+.edit-user-container .css-17ffvgn-MuiTypography-root{
+font-size: 1rem !important;
+}
