--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -533,3 +533,12 @@ button.cancelbtn{
 .elec-number-field {
   width: 10rem;
 }
+
+.reff-mobile {
+  width: 100% !important;
+  height: 3.4rem !important;
+  border-radius: 13px;
+  border: 1px solid grey;
+  background: #ffffff;
+  padding-left: 1.2rem;
+}
