ministry table api integration done

--- a/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
+++ b/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
@@ -36,8 +36,7 @@
   justify-content: center;
   align-items: center;
   gap: 8px;
-  border: none
-;
+  border: none;
   border-radius: 8px;
   background: #61BE7A;
   color: #FFF;
@@ -45,6 +44,7 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+
 }
 
 .input-field{
