--- a/app/javascript/app/modules/eminenthome/shared/tabs/tabs.css
+++ b/app/javascript/app/modules/eminenthome/shared/tabs/tabs.css
@@ -37,6 +37,7 @@ button.downloadBtn,button.downloadBtn:hover {
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    text-transform: capitalize;
 }
 
 .excel-upload {
