'fixed electoral Details'

--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -277,6 +277,8 @@ button.cancelbtn{
 }
 
 .selected-languages {
+  width: 21rem;
+  flex-flow: wrap;
   display: flex;
   gap: 0.5rem;
   font-size: 0.8rem;
