'fixed electoral Details'

--- a/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
+++ b/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
@@ -250,3 +250,7 @@ page-item:first-child .page-link{
 .edit-user-container .css-17ffvgn-MuiTypography-root{
 font-size: 1rem !important;
 }
+
+.edit-box-container {
+  margin-left: auto;
+}
