--- a/app/javascript/app/modules/eminentpersonalityhome/eminentpersonalityhome.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentpersonalityhome.scss
@@ -2,20 +2,21 @@ $borderColor: #D8D8D8;
 .detailHeading{
   text-align: center;
   position: relative;
-  margin:2rem 0;
-  &:after, &:before{
+  margin:2rem -1rem;
+}
+.detailHeading-dashed {
     content:'';
-    position: absolute;
     border: 2px dashed ($borderColor);
-    top: 40%;
     transform: translateY(-50%);
     width: 136px;
-  }
-  &:after{
-    left: 25%;
-  }
-  &:before{
-    right: 25%;
-  }
+    height: 0rem;
+    margin-top: 1.5rem;
+}
 
+.dashed-1 {
+  margin-right: 1rem;
+}
+
+.dashed-2 {
+  margin-left: 1rem;
 }
