--- a/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
+++ b/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
@@ -260,3 +260,7 @@ font-size: 1rem !important;
 .min-width-24rem {
   min-width: 24rem;
 }
+
+.education-profession-container {
+  min-width: 10rem;
+}
