--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -541,6 +541,10 @@ button.cancelbtn{
   height: 3.4rem !important;
   border-radius: 13px;
   border: 1px solid grey;
-  background: #ffffff;
+  background: #f8f9fa;
   padding-left: 1.2rem;
+}
+
+.save-progress-info {
+  margin-left: 0.3rem;
 }
