--- a/app/javascript/app/modules/eminentpersonalityhome/component/stepper/stepper.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/component/stepper/stepper.scss
@@ -78,3 +78,8 @@ mark {
 .close-icon {
   cursor: pointer;
 }
+
+.css-zpcwqm-MuiStepConnector-root {
+  left: calc(-54% + 36px) !important;
+  right: calc(46% + 37px) !important;
+}
