changes for the bugs

--- a/app/views/admin/manual_upload.html.erb
+++ b/app/views/admin/manual_upload.html.erb
@@ -71,10 +71,10 @@
             <% end %>
             <div class="form-group">
               <label for="file" class="form-label">CSV File<span class="text-danger">*</span></label>
-              <input class="form-control form-control-lg" name="file" id="file" type="file" required="required">
+              <input class="form-control form-control-lg" name="file" id="file" type="file" required="required" accept="text/csv">
             </div>
             <div class="form-group">
-              <label for="email" class="form-label">Email address</label>
+              <label for="email" class="form-label">Email address<span class="text-danger">*</span></label>
               <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com">
             </div>
         </article>
