--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -515,6 +515,7 @@ button.cancelbtn{
 
 .upload-resume-button .css-sghohy-MuiButtonBase-root-MuiButton-root {
   background: #61BE7A !important;
+  border-radius: 0.8rem;
 }
 
 .pdf-icon-name {
@@ -610,4 +611,13 @@ button.cancelbtn{
 
 .start-year-NA {
   margin-top: -2.4rem !important;
+}
+
+.pdf-msg {
+  justify-content: flex-end;
+  display: flex;
+}
+
+.pdf-msg-text {
+  margin-top: 0.5rem;
 }
