--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -621,3 +621,11 @@ button.cancelbtn{
 .pdf-msg-text {
   margin-top: 0.5rem;
 }
+
+.election-contest-count {
+font-size: 1.5rem;
+margin-right: 1rem;
+display: flex;
+margin-top: auto;
+margin-bottom: auto;
+}
