--- a/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
+++ b/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
@@ -264,3 +264,8 @@ font-size: 1rem !important;
 .education-profession-container {
   min-width: 10rem;
 }
+
+.details-edit-list {
+  position: absolute;
+  z-index: 1;
+}
