--- a/app/javascript/app/modules/eminenthome/pages/slotting/comoponent/slottingassignbtnsidebar.css
+++ b/app/javascript/app/modules/eminenthome/pages/slotting/comoponent/slottingassignbtnsidebar.css
@@ -11,3 +11,8 @@
     border: 1px solid transparent !important;
     padding: 5px;
 }
+.countnumber{
+    width: 40%;
+    border: 1px solid #8C8989;
+    padding: 5px 8px;
+}
