'login logout implented'

--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -641,3 +641,12 @@ margin-bottom: auto;
 .div.MuiOutlinedInput-root {
   overflow: hidden;
 }
+
+.qualification-name {
+  display: flex;
+  width: 100%;
+}
+
+.highest-qualification-radio {
+  width: 3rem;
+}
