--- a/app/javascript/app/modules/eminentpersonalityhome/header/header.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/header/header.scss
@@ -66,25 +66,28 @@
 }
 
 .navbar-profile {
+  min-width: 12rem;
   display: flex;
-  justify-content: space-around;
+  border: 0.5px solid lightgray;
+  border-radius: 16px;
   align-items: center;
-  height: 15px;
-  background: rgba(255, 255, 255, 1);
-  border: 1px solid #ECECEC;
-  border-radius: 15px;
-  padding: 20px;
-  gap: 30px;
+  height: 2.9rem;
 
-  span {
+span {
+    margin: auto;
     font-family: 'Montserrat';
     font-weight: 600;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 15px;
     display: flex;
     align-items: center;
     color: #828282;
   }
+}
+
+.profile-arrow-svg {
+  margin-left: auto;
+  margin-right: 0.5rem;
 }
 
 .logout-navbar-text{
