'login logout implented'

--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -650,3 +650,10 @@ margin-bottom: auto;
 .highest-qualification-radio {
   width: 3rem;
 }
+
+.add-ministry-container {
+  margin-top: 2rem;
+  width: 9rem;
+  font-size: 1.1rem;
+  color: #FF9559 !important;
+}
