--- a/app/javascript/app/modules/eminenthome/pages/slotting/comoponent/slottingassignbtnsidebar.css
+++ b/app/javascript/app/modules/eminenthome/pages/slotting/comoponent/slottingassignbtnsidebar.css
@@ -16,3 +16,10 @@
     border: 1px solid #8C8989;
     padding: 5px 8px;
 }
+.edit-popup{
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    background: #fff;
+    box-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+}
