--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/allfroms.scss
@@ -673,3 +673,11 @@ margin-bottom: auto;
   align-items: center;
   gap: 7px;
 }
+
+.width-22rem {
+  width: 22rem;
+}
+
+.margin-left-3-rem {
+  margin-left: 3rem;
+}
