--- a/app/javascript/app/modules/eminenthome/pages/masterofvacancies/masterofvacancies.css
+++ b/app/javascript/app/modules/eminenthome/pages/masterofvacancies/masterofvacancies.css
@@ -23,3 +23,9 @@
     background: transparent;
     color: rgba(0,0,0,0.6);
 }
+.element{
+    text-decoration: underline;
+}
+.element:hover {
+    cursor: pointer;
+}
