--- a/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
+++ b/app/javascript/app/modules/eminenthome/pages/hometable/hometable.scss
@@ -264,3 +264,9 @@ font-size: 1rem !important;
 .education-profession-container {
   min-width: 10rem;
 }
+
+
+
+.border-bottom{
+  border-bottom: 1px solid #E6E6E6 !important;
+}
