--- a/app/javascript/app/modules/eminentpersonalityhome/eminentforms/radioButton.css
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentforms/radioButton.css
@@ -53,3 +53,16 @@
 .disabled-true {
     border: 0.1px solid darkgray !important;
 }
+
+.radio-outer-component-disabled-true {
+    border: 0.1px solid darkgray !important;
+}
+
+.radio-btn-inner-component-disabled-true {
+    background: darkgray !important;
+    border: 0.1px solid darkgray !important;
+}
+
+.disabled-true {
+    border: 0.1px solid darkgray !important;
+}
