--- a/app/javascript/app/modules/eminentHome/pages/hometable/hometable.scss
+++ b/app/javascript/app/modules/eminentHome/pages/hometable/hometable.scss
@@ -269,6 +269,9 @@ font-size: 1rem !important;
 
 .border-bottom{
   border-bottom: 1px solid #E6E6E6 !important;
+}
+
+
 .home-edit-list {
   position: absolute;
   z-index: 5;
