--- a/app/javascript/app/modules/eminentHome/pages/gom/gomPage/gomPage.scss
+++ b/app/javascript/app/modules/eminentHome/pages/gom/gomPage/gomPage.scss
@@ -45,7 +45,7 @@
 }
 .button-upload{
   border-radius: 10px;
-  background: green;
+  background: #61BE7A;
   color: white;
   height:47px;
   width: 180px;
