slotting side add delete vacancy done

--- a/app/javascript/app/modules/eminentHome/pages/slotting/comoponent/slottingassignbtnsidebar.css
+++ b/app/javascript/app/modules/eminentHome/pages/slotting/comoponent/slottingassignbtnsidebar.css
@@ -63,6 +63,6 @@ button.savebtn, button.savebtn:hover{
     font-size: 16px;
     font-weight: 500;
 }
-.addRemark input {
-text-align:center
+.addremark input {
+    text-align: center;
 }
