'file status table complete'

--- a/app/javascript/app/modules/eminentHome/pages/dailogBox/dailogBox.scss
+++ b/app/javascript/app/modules/eminentHome/pages/dailogBox/dailogBox.scss
@@ -24,3 +24,16 @@
   width: 34rem;
   border-radius: 1.2rem;
 }
+
+.button-container {
+  margin-left: 1rem;
+  gap:1rem
+}
+
+.eminent-update-button {
+  margin-left: 0rem;
+}
+
+.eminent-cancel-button {
+  margin-left: 0rem;
+}
