--- a/app/javascript/app/modules/eminentHome/pages/fileStatus/fileStatus.scss
+++ b/app/javascript/app/modules/eminentHome/pages/fileStatus/fileStatus.scss
@@ -82,6 +82,19 @@ $whiteColor:#fff;
   margin-left: 8rem;
 }
 
+.eminent-cancel-button {
+  margin-top: 0.5rem;
+  height: 2.5rem;
+  border: 1px solid #FF9559;
+  padding: 0px 1.2rem;
+  font-size: 1rem;
+  background: #fff;
+  color: #FF9559;
+  font-weight: 600;
+  border-radius: 8px;
+  margin-left: 8rem;
+}
+
 .eminent-status-tag {
   height: 1.5rem;
   display: flex;
