--- a/app/javascript/app/modules/eminentHome/pages/hometable/hometable.css
+++ b/app/javascript/app/modules/eminentHome/pages/hometable/hometable.css
@@ -287,4 +287,5 @@ font-size: 1rem !important;
 }
 
 .edit-box-container .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.home-edit-list.css-1ps6pg7-MuiPaper-root {
+  position: absolute;
 }
