'open list functionality works fine'

--- a/app/javascript/app/modules/eminentpersonalityhome/eminentpersonalityhome.scss
+++ b/app/javascript/app/modules/eminentpersonalityhome/eminentpersonalityhome.scss
@@ -3,6 +3,7 @@ $borderColor: #D8D8D8;
   text-align: center;
   position: relative;
   margin:2rem -1rem;
+  max-width: 97%;
 }
 .detailHeading-dashed {
     content:'';
