mov issues fixed

--- a/app/javascript/app/modules/eminentHome/pages/masterofvacancies/masterofvacancies.css
+++ b/app/javascript/app/modules/eminentHome/pages/masterofvacancies/masterofvacancies.css
@@ -29,3 +29,7 @@
 .element:hover {
     cursor: pointer;
 }
+.css-11xur9t-MuiPaper-root-MuiTableContainer-root{
+    max-height: 466px;
+    overflow-y: auto;
+}
